syntax = "proto3";

package user;

option go_package = "github.com/abaika-abay/live_sports_project/user-service/proto";

service UserService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc GetProfile (GetProfileRequest) returns (GetProfileResponse);
  rpc UpdateProfile (UpdateProfileRequest) returns (GetProfileResponse);
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  string user_id = 1;
  string message = 2;
  bool success = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string user_id = 1;
  string token = 2;
  bool success = 3;
  string message = 4;
}

message GetProfileRequest {
  string user_id = 1;
}

message UpdateProfileRequest {
  string user_id = 1;
  string username = 2;
  string email = 3;
}

message GetProfileResponse {
  string user_id = 1;
  string username = 2;
  string email = 3;
  string created_at = 4;
  bool success = 5;
  string message = 6;
}